--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.9",
     "core-js": "^3.8.3",
     "i": "^0.3.7",
+    "vee-validate": "^4.15.0",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
     "vuetify": "^3.7.9"
